# pg_parrot

./: Cargo.toml
ai_client/: Cargo.toml
pgp_core/: Cargo.toml
pgp_core/src/: config.rs  connection.rs  error.rs  errors.rs  lib.rs
pgp_core/src/openai/: functions.rs
pgp_ui/: Cargo.toml
pgp_ui/src/: dashboard.rs  error.rs  main.rs
pgp_ui/src/dashboard/: sidebar.rs  viewport.rs
ui/: Cargo.toml
ui/src/: config.rs  dashboard.rs  error.rs  main.rs
ui/src/dashboard/: sidebar.rs
