[package]
name = "pgp_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgp_core = { path = "../pgp_core" }
iced = { version = "0.10.0", features = ["tokio"] }
tokio = { version = "1.33", features = ["full"]}
